updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am new to coding, have only ever worked in retail</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>SLC UT</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Table top games mostly</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One that causes less panic attacks then my old one.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Taylorsville</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Websites are a big part of my life aswell as most peoples lives, I'm fasinated but what goes into producing/maintaing them</p>
     </section>
 
     <footer id="footer">
